# KK

./: .gitignore  README.md  docker-compose.yml
bot/: .env.example  Dockerfile  ai_model.py  database.py  docker-compose.yml  main.py  model.py  pyproject.toml  utils.py
bot/database/: database.py  models.py
bot/utils/: keyboards.py  utils.py
parser/: .env.example  Dockerfile  go.mod  main.go  types.go
postgres/: .env.example
